1112: GET postsession survey definition endpoint
